--- a/examples/vue-cli/package.json
+++ b/examples/vue-cli/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "nodemon -w '../../src' -e ts --exec 'vue-cli-service serve'",
+    "serve": "nodemon -w '../../src' -e ts --exec 'cross-env DEBUG=unplugin-vue-images:context vue-cli-service serve --verbose'",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -15,10 +15,7 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
     "unplugin-front-end-image": "workspace:*",
     "vue-template-compiler": "^2.6.14"
   },
