--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "build": "tsup",
     "dev": "tsup --watch src",
     "lint": "eslint .",
-    "play": "npm -C playground run dev",
+    "play": "npm -C examples/vue-cli run serve",
     "prepublishOnly": "npm run build",
     "release": "bumpp && pnpm publish",
     "start": "tsx src/index.ts",
